Fix image overflow on News page

--- a/wis.css
+++ b/wis.css
@@ -1,7 +1,7 @@
 /*
  * Author: Vladan Kudlac
  * License: The Unlicense
- * Version: 1.0
+ * Version: 1.1
 */
 
 /* ### BEGINNING OF FONTS ### */
@@ -229,6 +229,11 @@ input[type=submit], input[type=button] {
 
 table.tfixed{
   max-width:100%;
+  table-layout: fixed;
+}
+
+table.tfixed img {
+  max-width: 100%;
 }
 
 a.sbtn, a.sbtnr, a.sbtng, a.sbtno {
